WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61480
drag-not-loaded-image.html test crashes when WebKit is built with debug option
https://bugs.webkit.org/show_bug.cgi?id=61480
Summary
drag-not-loaded-image.html test crashes when WebKit is built with debug option
Igor Trindade Oliveira
Reported
2011-05-25 16:01:26 PDT
drag-not-loaded-image.html test crashes when WebKit is built as debug
Attachments
patch
(1.94 KB, patch)
2011-05-25 16:07 PDT
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Igor Trindade Oliveira
Comment 1
2011-05-25 16:07:40 PDT
Created
attachment 94876
[details]
patch proposed patch.
Andreas Kling
Comment 2
2011-05-25 16:15:34 PDT
Comment on
attachment 94876
[details]
patch Cool catch. r=me
WebKit Commit Bot
Comment 3
2011-05-26 00:15:47 PDT
Comment on
attachment 94876
[details]
patch Clearing flags on attachment: 94876 Committed
r87366
: <
http://trac.webkit.org/changeset/87366
>
WebKit Commit Bot
Comment 4
2011-05-26 00:15:51 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5
2011-05-26 08:06:56 PDT
***
Bug 61499
has been marked as a duplicate of this bug. ***
Ademar Reis
Comment 6
2011-05-26 09:07:51 PDT
Revision
r87366
cherry-picked into qtwebkit-2.2 with commit 09d9bcb <
http://gitorious.org/webkit/qtwebkit/commit/09d9bcb
>
John Knottenbelt
Comment 7
2011-06-01 04:35:07 PDT
***
Bug 61486
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug