2011-05-26  Igor Oliveira  <igor.oliveira@openbossa.org>

Reviewed by Andreas Kling.

        drag-not-loaded-image.html test crashes when WebKit is built with debug option
        https://bugs.webkit.org/show_bug.cgi?id=61480

        Checks if image has content before starting to drag.

        * page/DragController.cpp:
        (WebCore::DragController::startDrag):

Canonical link: https://commits.webkit.org/76917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87366 268f45cc-cd09-0410-ab3c-d52691b4dbfc